potential blurry svg text fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -182,9 +182,9 @@ body {
 
       text {
         font-family: "Helvetica", "Arial", sans-serif !important;
-        font-size: 11px;
+        font-size: 30px;
         letter-spacing: 1.3px;
-        font-variation-settings: "wght" 650;
+        font-variation-settings: "wght" bold;
         fill: black;
         // text-transform: uppercase;
       }
